# chiaki-py

./: .gitignore  CMakeLists.txt  build_chiaki_pybind_debug.ps1  build_ubuntu.sh  gui.py  requirements.txt  set_env.ps1  setup.ps1  test.py  vcpkg.json
.github/workflows/: build-windows.yml
chiaki_py/: __init__.py
pybind/: CMakeLists.txt
pybind/include/: backend.h  chiaki-pybind.h  controllermanager.h  discovery_manager.h  elapsed_timer.h  event_queue.h  event_source.h  host.h  py_av_frame.h  py_controllermanager.h  py_exception.h  py_sessionlog.h  py_streamsession.h  sessionlog.h  settings.h  streamsession.h  timer.h  utils.h
pybind/include/core/: audio.h  audioreceiver.h  base64.h  bitstream.h  common.h  controller.h  discovery_service.h  ecdh.h  fec.h  feedback.h  log.h  session.h  struct_wrapper.h  takion.h
pybind/include/core/remote/: holepunch.h
pybind/src/: TODO.md  av_frame.cpp  backend.cpp  bindings.cpp  controllermanager.cpp  discovery_manager.cpp  event_source.cpp  host.cpp  py_av_frame.cpp  py_controllermanager.cpp  py_discover.c  py_host.cpp  py_sessionlog.cpp  py_settings.cpp  py_streamsession.cpp  sessionlog.cpp  settings.cpp  streamsession.cpp  utils.cpp  wakeup.c
pybind/src/core/: audio.cpp  base64.cpp  bitstream.cpp  common.cpp  controller.cpp  discovery_service.cpp  ecdh.cpp  fec.cpp  feedback.cpp  log.cpp  session.cpp  takion.cpp
pybind/src/core/remote/: holepunch.cpp
scripts/: build_chiaki_lib_debug.ps1  build_chiaki_lib_release.ps1  build_chiaki_macosx_x86_64.sh  build_chiaki_macox_x86_64.sh  build_chiaki_portable_debug.ps1  build_chiaki_py_ubuntu.sh  build_chiaki_pybind_debug.ps1  build_chiaki_pybind_release.ps1  build_macosx_x86_64.sh  build_osx_x86.sh  build_ubuntu.sh  build_ubuntu_wsl.sh  set_env.ps1  setup.ps1  test.ps1
src/: chiaki_py_settings.py  chiaki_subject.py  controller_registry.py  gui.py  psn_account.json  psn_account.py  psn_login.py  psn_login_base.py  psn_login_qt.py  settings.json  test.py  test_discovery.py  test_psn_login.py  test_registration.py  test_selenium.py
