
cmake_minimum_required(VERSION 3.2)

project(chiaki-py)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(PythonInterp 3 REQUIRED) # Make sure nanopb doesn't find Python 2.7 because Python 2 should just die.set(CHIAKI_PY_VERSION_MAJOR 1)

set(CHIAKI_PY_VERSION_MAJOR 1)
set(CHIAKI_PY_VERSION_MINOR 9)
set(CHIAKI_PY_VERSION_PATCH 6)
set(CHIAKI_PY_VERSION ${CHIAKI_PY_VERSION_MAJOR}.${CHIAKI_PY_VERSION_MINOR}.${CHIAKI_PY_VERSION_PATCH})

set(CHIAKI_ENABLE_STEAM_SHORTCUT OFF)
set(CHIAKI_IS_SWITCH ${NSWITCH})
set(CHIAKI_USE_SYSTEM_CURL OFF)

list(APPEND CMAKE_REQUIRED_LIBRARIES "ws2_32" "crypt32")

add_definitions(-DCHIAKI_PY_VERSION_MAJOR=${CHIAKI_PY_VERSION_MAJOR} -DCHIAKI_PY_VERSION_MINOR=${CHIAKI_PY_VERSION_MINOR} -DCHIAKI_PY_VERSION_PATCH=${CHIAKI_PY_VERSION_PATCH} -DCHIAKI_PY_VERSION=\"${CHIAKI_PY_VERSION}\")

add_subdirectory(libs/chiaki-ng/third-party)
add_subdirectory(pybind)